refactor: вынести валидацию основных полей Event в аннотации